--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "node src/server.js"
-    
-    
-    
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "fs": "^0.0.1-security"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
